Draft github actions for building native image